# slack-notifier

./: .env_example  .gitignore  PUBLISHING.md  README.md  pyproject.toml  tree.txt
src/slack_notifier/: __init__.py  notifier.py
tests/: test_notifier.py
